[package]
name = "yare"
description = "Lean parameterized test case library for Rust 🚀"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
version = "2.0.0"
license = "MIT OR Apache-2.0"
edition = "2021"
documentation = "https://docs.rs/crate/yare"
repository = "https://github.com/foresterre/yare"
readme = "README.md"
keywords = ["parameterized", "parametrized", "test", "unit-test", "test-case"]
categories = ["development-tools", "development-tools::testing"]
rust-version = "1.62"

[dependencies]
yare-macro = { path = "yare-macro", version = "2.0.0" }

[workspace]
members = ["yare-macro", "yare-tests-integration", "yare-tests-ui"]
