[package]
name = "yare-macro"
version = "1.0.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Attribute macro crate for the Yare parameterized tests library."
documentation = "https://docs.rs/crate/yare-macro"
repository = "https://github.com/foresterre/workshop/yare"
readme = "readme.md"
keywords = ["parameterized", "attribute", "test", "unit-test", "workshop"]
categories = ["development-tools", "development-tools::testing"]

autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/cases.rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
trybuild = "1.0"

[features]