[package]
name = "yare-macro"
version = "2.0.0"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Attribute macro crate for the Yare parameterized tests library."
documentation = "https://docs.rs/crate/yare-macro"
repository = "https://github.com/foresterre/yare"
readme = "readme.md"
keywords = ["parameterized", "attribute", "test", "unit-test", "test-case"]
categories = ["development-tools", "development-tools::testing"]

autotests = false
rust-version = "1.56"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/cases.rs"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
trybuild = "1.0"
