[package]
name = "yare-integration-tests"
version = "0.0.0-tests"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yare = { path = "../" }
tokio = { version = "1", features = ["full"] }